# project-x

./: .gitignore  ALL_WORK.md  BLUEPRINT.md  BLUEPRINT_JARVIS_IRONMAN.md  BLUEPRINT_SELF_PACED.md  BLUEPRINT_UNIFIED_CURRICULUM.md  CLAUDE.md  CURR_WORK.md  GOAPESHIT_TODO.md  HANDOFF.md  MISTAKES.md  PHASE10_DESIGN.md  PLAN_TO_JARVIS.md  README.md  memory.md  paper.md  pyproject.toml  reproduce.sh  verify_thesis.sh
benchmarks/: rpj_v5_manifest.json  rpj_v5_manifest.sha256
data/corpus_raw/: analects_confucius.txt  divine_comedy.txt  emerson_essays.txt  (+7 more)
docs/: A_TO_Z_PLAN.md  CLAUDE.md  DO_THIS_NEXT.md  MANIFESTO.md  REPO_CONTROL.md  paper.md
gpt-codex/: PROGRESS.md  extraction_status.json  paper_claims.jsonl  source_inventory.json  source_inventory.md
ref/: SOURCE_MANIFEST.md  sources.json
sandbox/: __init__.py  agent_io.py
scripts/: aggregate_phase7_results.py  analyze_emergence.py  chat_probe_2026_05_13.py  check_k_eff.py  compute_cbr_bimodality.py  cycle_13_emergence_at_scale.py  cycle_14_demo_post_thesis.py  cycle_15_demo_post_substrate_write.py  diagnose_actions.py  eval_doerr.py  eval_emergence_controls.py  eval_jarvis_harness.py  eval_od_ndt.py  fetch_corpus.py  fetch_refs.py  generate_docs.py  persona_consistency_curve.py  persona_generalization_strict.py  phase7_baseline.sh  plot_k_eff.py  plot_phase8_dscaling.py  plot_phase8_t4.py  reward_transfer_replay.py  rewarded_humor_walk_demo.py  run_multiseed_validation.py  run_phase7_grid.sh  run_phase7_hbsweep.sh  run_server.py  run_training.py  sandbox_toy_tasks_demo.py  score_benchmarks.py  search_brain_structure.py  terminus_cross_seed_sweep.py  terminus_learning_harness_demo.py  test_heterogeneous_brain.py  train_ccb.py  train_ccb_gpu.py  train_crossmodal.py  train_jarvis_harness.py  train_multitask_ccb.py  (+4 more)
src/: __init__.py
tests/: CLAUDE.md  __init__.py  test_anti_cheat.py  test_audit_log_v1.py  test_benchmark_harness.py  test_bitpack.py  test_compressed_memory.py  test_encoder.py  test_grader.py  test_harness.py  test_harness_v2.py  test_hdc_substrate.py  test_hebbian_bank.py  test_hidden_rule_actions.py  test_k_rollout_v0.py  test_killer_milestone.py  test_natural_mode_v0.py  test_persona.py  test_primitive_emergence_v0.py  test_random_index_hebbian.py  test_reasoning_agent.py  test_reasoning_calculus.py  test_reasoning_complex_analysis.py  test_reasoning_diophantine.py  test_reasoning_integration.py  test_reasoning_number_theory.py  test_reasoning_ode.py  test_reasoning_physics.py  test_reasoning_symbolic.py  test_reasoning_verifier.py  test_retrieval_modes.py  test_sandbox.py  test_semantic_hdc_memory.py  test_semantic_memory_agent.py  test_semantic_memory_dataset.py  test_smoke.py  test_temporal_hierarchy.py  test_temporal_trace_bank.py
web/: requirements.txt  server.py
(+586 files in other folders)
