[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-x"
version = "0.0.1"
description = "Post-transformer organic memory + agent stack: HDC + Hebbian encoders, semantic memory with fact-graph and structural retrieval, rule-based agent controller. No pretrained transformer derivatives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
# Phase 1-6 transformer-style historical control (audit-C2). Required ONLY
# for `legacy/transformer_scaffolding.py`, `experiments/compressed_memory.py`,
# `experiments/tasks.py`, and `smoke.py` (the smoke entry-point that exercises
# the legacy ProjectXModel). The live Phase 9-10 organic stack
# (semantic_hdc_memory, semantic_memory_agent, encoder, random_index_hebbian,
# hdc_substrate) does NOT import torch — keeping it optional enforces the
# organic-thesis-vs-historical-control quarantine at install time.
legacy = [
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

